# cobi-problem-generator

./: .gitignore  LICENSE  MANIFEST.in  README.md  development.md  pyproject.toml  requirements.txt
examples/: multimodal_problem.py  one_dimensional_problem.py  random_problem.py  user_problem.py
src/cobi/: __init__.py  cobi_problem.py  ga_unsorted_pop.py  nsga2_unsorted_pop.py  problem_generator.py  run_algorithm.py  utils.py
