[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cobi"
version = "0.5.0"
description = "A generator of COBI (constrained bi-objective) problems"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Anne Auger" },
  { name = "Dimo Brockhoff" },
  { name = "Jordan Cork" },
  { name = "Luka Opravš" },
  { name = "Tea Tušar" },
]
maintainers = [
  { name = "Luka Opravš" },
]
dependencies = [
  "numpy>=1.26",
  "matplotlib>=3.8",
  "pymoo>=0.6.1",
  "moarchiving>=1.0",
  "qpsolvers>=4.8",
  "cvxpy>=1.6",
  "scikit-learn>=1.4",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD 3-Clause License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/numbbo/cobi-problem-generator"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
